--- a/convert-img/convert-img.vcxproj.filters
+++ b/convert-img/convert-img.vcxproj.filters
@@ -26,5 +26,13 @@
     <ClInclude Include="src\PyControler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="convert-img.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
